--- a/ttf-yutaCo2/PKGBUILD
+++ b/ttf-yutaCo2/PKGBUILD
@@ -11,7 +11,7 @@ install=ttf.install
 source=(http://net2.system.to/pc/cgi-bin/download.cgi?file=yutaCo2_ttc_${pkgver//./}.zip)
 
 package() {
-  mv yutCo2_ttc_${pkgver//./}.ttc yutaCo2.ttc
+  mv yutaCo2_ttc_${pkgver//./}.ttc yutaCo2.ttc
   install -d "$pkgdir/usr/share/fonts/TTF"
   install -m644 *.ttc "$pkgdir/usr/share/fonts/TTF/"
   install -d "$pkgdir/usr/share/licenses/$pkgname"
